# CodeBTI

./: .gitignore  AGENT.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: validate.yml
docs/: golden-path.md
example/: CodeStyle.md  Recording.md
examples/: CodeStyle.md  Recording.md
neat-freak/: SKILL.md
neat-freak/references/: agent-paths.md  codebti-markdown-workflow.md
neat-freak/zh/: SKILL.md
patterns/python/: README.md  bridge.md  builder.md  composite.md  iterator.md  mediator.md  memento.md  state.md  strategy.md  template-method.md
project/profiles/: README.md  project-profile-taxonomy.md
project/questions/: README.md  fixed-project.md
project/templates/: MultiLanguageCodeStyle.template.md  ProjectStyle.template.md
python/patterns/: README.md
python/profiles/: README.md  python-profile-taxonomy.md
python/questions/: README.md  adaptive-question-guide.md  fixed-python.md  question-format.md
python/records/: README.md  session-record.template.md
python/templates/: CodeStyle.template.md  README.md
questions/: README.md  editorial-guide.md
records/: README.md
ref/profiles/: README.md
ref/questions/: fixed-python.md
ref/records/: session-record.template.md
ref/templates/: CodeStyle.template.md
scripts/: validate_repo.py
shared/questions/: adaptive-question-guide.md  editorial-guide.md  question-format.md  shared-architecture.md
tests/: test_validate_repo.py
typescript/patterns/: README.md
zh/: AGENT.md  README.md  SKILL.md  TRANSLATION_STATUS.md
(+128 files in other folders)
