[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "codebti"
version = "0.2.0"
description = "Markdown-first CodeBTI interview and style guidance system"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.setuptools]
py-modules = []
